[fix]breadcrumd wrap (#1026)

--- a/src/theme/Navbar/Content/styles.module.css
+++ b/src/theme/Navbar/Content/styles.module.css
@@ -8,12 +8,14 @@ Hide color mode toggle in small viewports
   
 }
 
-.navbarLeftToc {
-  display:flex;
-  align-items: center;
-  padding:0 10px;
-  /* overflow-x-auto text-nowrap */
-}
-.navbarLeftToc::-webkit-scrollbar {
-  display: none;
+@media (max-width: 1366px) {
+  .navbarLeftToc {
+    display:none;
+    align-items: center;
+    padding:0 10px;
+    /* overflow-x-auto text-nowrap */
+  }
+  .navbarLeftToc::-webkit-scrollbar {
+    display: none;
+  }
 }
